# gwf-manager

./: LICENSE  README.md  pyproject.toml
src/gwf_manager/: __init__.py  conf.py  config.py  exceptions.py  executors.py  gwf_imports.py  manager.py  path.py  registry.py  structures.py  utilities.py
src/gwf_manager/analysis/: __init__.py  addon.py  core.py
src/gwf_manager/decorators/: __init__.py  caching.py  scratch.py
src/gwf_manager/sample/: __init__.py  core.py  metadata.py  sequencing_data.py
